logs/wlnm.log
Listing '.'...
Listing './bin'...
Compiling './bin/bottle.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Beaker-1.9.0.egg-info'...
Listing './lib/python3.5/site-packages/beaker'...
Listing './lib/python3.5/site-packages/beaker/crypto'...
Listing './lib/python3.5/site-packages/beaker/ext'...
Listing './lib/python3.5/site-packages/bottle-0.12.13.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wlnm'...
Listing './lib/python3.5/site-packages/wlnm/app'...
Listing './lib/python3.5/site-packages/wlnm/app/css'...
Listing './lib/python3.5/site-packages/wlnm/app/js'...
Listing './lib/python3.5/site-packages/wlnm/app/lib'...
Listing './lib/python3.5/site-packages/wlnm/app/lib/angular'...
Listing './lib/python3.5/site-packages/wlnm/app/templates'...
Compiling './lib/python3.5/site-packages/wlnm/daemon.py'...
***   File "./lib/python3.5/site-packages/wlnm/daemon.py", line 33
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wlnm/database.py'...
***   File "./lib/python3.5/site-packages/wlnm/database.py", line 24
    os.makedirs(pdir,0700)
                        ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/wlnm/inputer.py'...
***   File "./lib/python3.5/site-packages/wlnm/inputer.py", line 54
    print 'Invilad command! Press Tab key or use help command list all avaiable command.'
                                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wlnm/search.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (search.py, line 62)
Compiling './lib/python3.5/site-packages/wlnm/server.py'...
***   File "./lib/python3.5/site-packages/wlnm/server.py", line 91
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wlnm/starter.py'...
***   File "./lib/python3.5/site-packages/wlnm/starter.py", line 29
    print "Admin server process starting "
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wlnm/test.py'...
***   File "./lib/python3.5/site-packages/wlnm/test.py", line 24
    except  Exception ,e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wlnm/util.py'...
***   File "./lib/python3.5/site-packages/wlnm/util.py", line 27
    print ">>>>>> help >>>>>>"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wlnm/webserver.py'...
***   File "./lib/python3.5/site-packages/wlnm/webserver.py", line 126
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wlnm/wlna.py'...
***   File "./lib/python3.5/site-packages/wlnm/wlna.py", line 41
    except  Exception ,e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wlnm/wlnac.py'...
***   File "./lib/python3.5/site-packages/wlnm/wlnac.py", line 43
    print util.decode_output(self.conn.nmstart(args))
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wlnm/wlnad.py'...
***   File "./lib/python3.5/site-packages/wlnm/wlnad.py", line 59
    def __init__(self,pidfile, port,stdin=os.devnull, stdout=os.devnull, stderr=os.devnull, home_dir='.', umask=022, verbose=1):
                                                                                                                  ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/wlnm/wlnm.py'...
***   File "./lib/python3.5/site-packages/wlnm/wlnm.py", line 38
    print "Weblogic Node Master"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wlnm/wlns.py'...
***   File "./lib/python3.5/site-packages/wlnm/wlns.py", line 41
    except  Exception ,e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wlnm/wlnsc.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (wlnsc.py, line 41)
Compiling './lib/python3.5/site-packages/wlnm/wlnsd.py'...
***   File "./lib/python3.5/site-packages/wlnm/wlnsd.py", line 74
    def __init__(self,pidfile, port,stdin=os.devnull, stdout=os.devnull, stderr=os.devnull, home_dir='.', umask=022, verbose=1):
                                                                                                                  ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/wlnm/wlnws.py'...
***   File "./lib/python3.5/site-packages/wlnm/wlnws.py", line 37
    except  Exception ,e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wlnm/wls.py'...
***   File "./lib/python3.5/site-packages/wlnm/wls.py", line 42
    print "%s starting request has been sent , will be in running status shortly. " % name
                                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/wlnm/wlst'...
Compiling './lib/python3.5/site-packages/wlnm/wlst/decryptPass.py'...
***   File "./lib/python3.5/site-packages/wlnm/wlst/decryptPass.py", line 21
    print "Usage:"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wlnm/wlst/startwls.py'...
***   File "./lib/python3.5/site-packages/wlnm/wlst/startwls.py", line 26
    print "Usage:"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wlnm/wlst/stopwls.py'...
***   File "./lib/python3.5/site-packages/wlnm/wlst/stopwls.py", line 27
    print "Usage:"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/wlnm-1.0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
